docs(phase18): close canonical single-thread baseline